--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -283,7 +283,7 @@
           
           - [Felicia Odamtten, Founder and Director of The Black Economists Network](https://www.tben.co.uk/the-team)
           
-          - [Evans Osabuohien, Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria](https://evansosabuohien.com/)
+          - [Evans Osabuohien, Ph.D., Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria](https://evansosabuohien.com/)
 
           - [Lebogang Ramafoko, Executive Director of Oxfam South Africa](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit)
           
