--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -281,12 +281,12 @@
       
           - [Bhaso Ndzendze, Ph.D., Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg](https://bhasondzendze.co.za)
           
-          - [Felicia Odamtten, Founder and Director of The Black Economists Network](https://www.tben.co.uk/the-team)
-          
           - [Evans Osabuohien, Ph.D., Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria](https://evansosabuohien.com/)
 
           - [Lebogang Ramafoko, Executive Director of Oxfam South Africa](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit)
           
+          - Speaker TBA
+
 
           
         **Moderator**
