Changing bio of Elnathan Tiokou

--- a/_data/2022/jias/people.yml
+++ b/_data/2022/jias/people.yml
@@ -143,9 +143,16 @@ participants:
       website: https://scholar.google.com/citations?hl=en&user=fGtN_AMAAAAJ
 
     - name: LOIC ELNATHAN TIOKOU FANGANG  
-      bio: "Elnathan Tiokou is a current MSc degree student from the African Institute for      Mathematical Science (AIMS-CAMEROON), a member of KmerAI and a big enthusiast of Machine      Learning combine with Business. His research interest is currently Federated Learning(FL).      He is studying the Adversarial robustness in Federated Learning frameworks and provides some      recommendations to improve FL systems. He is open to any opportunities related to Machine      Learning or Business. "
+      bio: "Elnathan Tiokou is a Junior researcher who holds an MSc degree in Data Science from
+      AFRICAN INSTITUTE FOR MATHEMATICAL SCIENCES (AIMS-CAMEROON). He is interested in the
+      application of Data Science to improve social goods. Aside from Mathematical Sciences, he
+      inspires people with his tales, experiences, and accomplishments on a daily basis (<a
+      href='https://www.linkedin.com/in/elnathan-tiokou/'>LinkedIn</a>
+      and <a href='https://youtube.com/c/ElnathanTiokouFr'>YouTube</a>). He considers himself an experimenter and is open to options both within and outside of his
+field of studies, such as scholarships, internships, mentorships, and a variety of other
+opportunities." 
       image: /assets/images/1GDbrqd68GbHbp7J8zOJpie2J9BShSfBI.jpeg
-      website: https://www.linkedin.com/in/elnathan-tiokou/
+      website: https://www.linkedin.com/in/elnathan-tiokou/ 
     
     - name: Angela Chukunzira 
       image: /assets/images/1WIFU9u0FPG0f76z08QP0MwkctM9_-DBy.jpeg
