--- a/_data/2022/penn/people.yml
+++ b/_data/2022/penn/people.yml
@@ -98,3 +98,106 @@ tas:
       image: /assets/images/penn2022_Eugeno.jfif
       bio: "Eugenio is a second-year Ph.D. student in Demography at the University of Pennsylvania. He holds a BSc and a MSc in Economics and Social Sciences from Bocconi University. Before becoming a PhD candidate, he worked as a research assistant at the Netherlands Interdisciplinary Demographic Institute and the Dondena Center for Research on Social Dynamics and Public Policy. His broad research interests include the interactions between population and the environment, migration, the computational social sciences, and inequality. He loves visualizing data and is interested in studying ways in which data visualization can help researchers to communicate more clearly and to reach a wider audience."
       website: https://www.pop.upenn.edu/bio/eugenio-paglino
+
+Participants:
+  title: Participants
+  people:
+    - name: Benjamin Manning 
+      image: /assets/images/penn22 - Benjamin Manning.jpg
+      bio: "I am a researcher at the University of Pennsylvania working in the computational social sciences. My (aspiring) research interests are 1) improving methods to answer social science questions using the tools of statistics and machine learning, 2) social networks and information economics. I will be enrolling at MIT in the fall of 2022 to pursue my PhD with the Information Technology group at Sloan."
+  
+    - name: Jamaal Green
+      image: /assets/images/penn22 - Jamaal Green.JPG
+      bio: "I am a postdoc interested in the ways that our built environment shapes social and economic inequality and figuring out ways to apply spatial analogies to explore these problems."
+  
+    - name: Nicolas Choquette-Levy
+      image: /assets/images/penn22-Choquette-Levy_Nicolas.jpg
+      bio: "Nic Choquette-Levy (he/him) is a PhD candidate in Public Policy and International Affairs at Princeton University. Nic's PhD research integrates agent-based modelling, game theory, and survey methods to assess the impacts of potential policy interventions, including weather-based crop insurance and cash transfers, on farmer climate adaptation outcomes in South Asia. At SICCS Penn, he is keen to learn more about network analysis and techniques for wrangling big datasets, particularly regarding global flows of remittances from international migrants. Nic is originally from Montreal, Canada, and obtained undergraduate degrees in biomedical engineering and international relations at the University of Southern California, and a Master's degree in Energy and Environmental Systems at the University of Calgary."
+
+    - name: Kadija Ferryman
+      image: /assets/images/penn22-Kadija Ferryman.jpg
+      bio: "Kadija Ferryman is a medical anthropologist who studies racial health equity in digital health technologies. Dr. Ferryman is Core Faculty at the Berman Institute of Bioethics and Assistant Professor in the Department of Health Policy and Management at the Johns Hopkins Bloomberg School of Public Health. Ferryman began her professional career over 20 years ago as a policy researcher at the Urban Institute in Washington, DC. Dr. Ferryman received her BA in anthropology from Yale University and her PhD in anthropology from the New School for Social Research. She has published research in journals such as Journal of the American Informatics Association, Health Care for the Poor and Underserved, and Genetics in Medicine. "
+      
+    - name: Bonnie Siegler
+      image: /assets/images/penn22- Bonnie Siegler.jpg
+      bio: "Bonnie is a PhD student in sociology at Columbia University in New York City. She is interested in the relationship between culture, inequality and organizations, focusing on K-12 schools. She analyzes how stakeholders in schools - administrators, teachers, parents, etc. - make meaning out of and understand their experiences in light of educational inequality and segregation. As cases, she has focused on school choice and school policies on teaching about race/racism. Her research uses a variety of methods including survey experiments, interviews, and computational text analysis."
+      
+    - name: Mauricio Bucca
+      image: /assets/images/penn22 - Mauricio Bucca.png
+      bio: "I’m an Assistant Professor in Sociology at the Universidad Católica de Chile. Previously, I was a Max Weber Postdoctoral Fellow at the European University Institute and earned a Ph.D. in Sociology at Cornell University. I study labor market inequalities, intergenerational mobility and beliefs about inequality using a combination of statistical modeling, empirical strategies for causal inference, experimental and computational methods."
+
+    - name: Abigail Dym
+      image: /assets/images/penn22- Abigail Dym.jpg
+      bio: "Abigail Dym is a joint-PhD candidate in political science and education policy at UPenn, where she studies political behavior related to civic education, political knowledge and engagement, learning, and public policy. She is committed to leveraging diverse research methodologies to answer questions and promote processes related to democratic governance, particularly for young people. "
+      
+    - name: Michael Cohen
+      image: /assets/images/penn22 - Michael Cohen.jpg
+      bio: "I am a postdoctoral researcher in the psychology department at UPenn. My primary interest is in understanding the psychological and brain mechanisms that underlie the persistence of misinformation in affecting decisions after a factual correction, a phenomenon known as the Continued Influence Effect. Prior to moving to this line of research (in my PhD at UCLA and a previous postdoc at Northwestern), I focused on how reward and strategies affect learning. I also have an interest in aging-related changes to cognition, and my work at Penn has included a collaboration with the neurologists at Penn Memory Center. I am interested in learning how to apply textual analysis methods to the constructed mock social media stimuli that we created for my current project, and also to learn how computational social science methods can be used to understand the spread of misinformation on real social media platforms."
+      
+    - name: Daniela (Ela) Castellanos-Reyes
+      image: /assets/images/penn22 - Ela Castellanos-Reyes.jpg
+      bio: "Daniela (Ela) Castellanos-Reyes is a Ph.D. Candidate in Learning Design and Technology at Purdue University. Proudly raised by a single mother, Ela approaches her research with the belief that online and distance learning improve women's lives. She is an educational researcher within the fields of instructional design and educational data mining. Her research focuses on supporting online learners' social presence through network analysis. Specifically, Ela is interested in how peer-influence shapes learning communities in online learning environments. Her recent work examines the relationship between student retention and social media affordances (e.g., like buttons) in Massive Open Online Courses. Ela's methodological expertise includes network analysis, survey research, and hierarchical linear models. Her work has been published in Computers in Human Behavior, the Journal of Computing in Higher Education, and TechTrends. Ela's work has been supported by the International Peace Scholarship awarded by Philanthropic Educational Organization (P.E.O.) and the Frank DeBruicker Graduate Award in Educational Technology. Prior to her doctoral studies, Ela earned her B.A. in English Philology and English Education from the Universidad Nacional de Colombia and a master’s degree in Learning Design and Technology at Purdue University. Outside research, Ela enjoys attending church, re-reading Harry Potter, and dancing in the kitchen with her husband. "
+      
+    - name: Haoning Xue
+      image: /assets/images/penn22 - Haoning Xue.jpg
+      bio: "Haoning is a PhD candidate in Communication at University of California Davis. Her research focuses on the spread and effects of health misinformation and correction online with both computational and experimental methods."
+      
+    - name: Garumma Feyissa
+      image: /assets/images/penn22 - Garumma Feyissa.jpeg
+      bio: "I am Garumma Feyissa. Currently, I am a postdoctoral researcher at Drexel University, School of Public Health. I hope that the training will help me to build computational skills and skills of web scraping. I am planning to apply these skills to understand perceptions of the community about health problems and policy perspectives on these problems. I aim to build skills in utilizing electronic medical records and social media. Further, I look forward to meet and collaborate with others with similar interests. "
+
+    - name: Shawn Chiang
+      image: /assets/images/penn22 - Shawn Chiang.jpg
+      bio: "Shawn Chiang is a PhD candidate in Health Behavior and Health Promotion and a doctoral fellow with the Center for Public Health and Technology at the University of Arkansas. His research focuses on the uses of new communication technologies to influence health behaviors and to reduce health disparities. His dissertation focuses on understanding the use of social media in health interventions and how engagement is operationalized to understand impact of social media on health behavior. You can learn more about his work at https://shawnchiang.com/. "
+      
+    - name: Mehak Sachdeva
+      image: /assets/images/penn22 - Mehak Sachdeva.jpg
+      bio: "Mehak Sachdeva is a PhD candidate in computational spatial science within the Spatial Analysis Research Center at Arizona State University. Her research interests are in creating and testing statistical tools for urban spatial analysis with a focus on understanding and incorporating the spatial scale of processes in local modeling."
+      
+    - name: Xinyi Zhou
+      image: /assets/images/penn22 - Xinyi Zhou.JPG
+      bio: "Xinyi Zhou is a Ph.D. candidate in Computer and Information Science at Syracuse University. Her research broadly spans (applied) machine learning, natural language processing, and computational social science. Currently, her research focuses on leveraging large-scale multimodal and behavioral data, psychological theories, and AI techniques to understand, predict, and mitigate mis/disinformation online. Her work on mis/disinformation has been published in, e.g., ACM Computing Surveys and The Web Conference. "
+      
+    - name: Muhammad Haroon
+      image: /assets/images/penn22 - Muhammad Haroon.jpg
+      bio: "I'm a PhD student in Computer Science at the University of California, Davis where I'm advised by Professor Zubair Shafiq. My research interests involve the privacy and fairness aspects of AI in online systems."
+      
+    - name: Xijing Li
+      image: /assets/images/penn22 - Xijing Li.jpg
+      bio: "2nd Year Ph.D. student in UNC-CH city and regional planning; Mphil in CUHK department of geography (research oriented); Bsc in Urban planning, PKU."
+      
+    - name: Rehana Odendaal
+      image: /assets/images/penn22 - Rehana Odendaal.JPG
+      bio: "Rehana Thembeka Odendaal is a joint PhD student in Education, Culture and Society and Sociology at the University of Pennsylvania. She earned her MA in Historical Studies and BSocSci at the University of Cape Town, with a particular interest in oral historeis and public institutions. Rehana's current work with Dr Krystal Strong's African Youth Leadership Study draws on her experience as a youth educator and organizer, and her PhD research hopes to understand the role that transnational education plays in shaping African political and economic development. Trained as a qualitative researcher, Rehana is excited about the opportunities that commutational socail science holds for expanding the scope of qualitative research. "
+      
+    - name: Julia Cope
+      image: /assets/images/penn22 - Julia Cope.jpg
+      bio: "Julia Cope is a PhD student at the Annenberg School for Communication at the University of Pennsylvania. The motivation for her research is to investigate how people communicate and engage with information through different mediums, especially in times of crisis. She is interested in the application of computational methods to investigate patterns in news exposure and news content at scale. She received her B.S. and M.S. in Information Science from the University of Pittsburgh and worked as a data analyst before joining Annenberg."
+      
+    - name: Zening Duan
+      image: /assets/images/penn22-Zening Duan.jpg
+      bio: "Zening (‘Ze’) Duan (Mass Communications) is a Ph.D. student in the School of Journalism and Mass Communication at the University of Wisconsin–Madison. His research examines public opinion dynamics, the political and societal effects of emerging media technology, and the applied methods in computational social science. His research works have appeared in Human Communication Research and Politics and the Life Sciences, and he co-authored one chapter in the book Battleground (2022). In 2021, he co-founded COMPutation, an independent, non-profit WeChat-based platform committed to breaking down walls between young scholars, industry partitioners, media, and the public by promoting research resources in computational social science. Ze is also a skiing enthusiast, and he hopes to learn how to fly a propeller plane."
+      
+    - name: Safianu Omar
+      image: /assets/images/penn22 - Safianu Omar.jpg
+      bio: "I am a PhD student in the department of Information Systems at the University of Cape Town, South Africa. Prior to that I have served as a researcher and lecturer at the Center for business and social informatics at the Islamic university college of Ghana and Akim State College respectively. My research areas are within the domain of ICT4D, social and development informatics and I am currently working on my PhD thesis related to using social media for boosting emergency and disaster communication within the sub-Saharan context."
+      
+    - name: Kai Feng
+      image: /assets/images/penn22 - Kai Feng.jpg
+      bio: "Kai Feng is a doctoral student in Demography and Sociology at the University of Pennsylvania. He is interested in family demography and social inequality with special attentions to East Asian contexts. In 2022 SICSS at Penn, he wants to learn text analysis and applies it to a dataset about Chinese millennials‘ dating/marriage preferences. "
+      
+    - name: Abiodun Azeez
+      image: /assets/images/Penn22-Abi Azeez.JPG
+      bio: "Abiodun Azeez is pursuing a PhD in sociology at the University of Pennsylvania. Her research interests are in disparities in access to banking products and housing. She is interested in using computational methods to investigate changing perceptions of financial services institutions and homeownership among various demographic groups.  "
+      
+    - name: Benjamin Lira
+      image: /assets/images/penn22-Benjamin Lira Luttges.jpg
+      bio: "I'm a first-year PhD student at Penn in the Psychology Department. I am working with Dr. Angela Duckworth. As of now, my work has centered on the limitations of questionnaire data (e.g., reference bias), and on potential ways to overcome it (e.g., analysis of natural text in application essays."
+      
+    - name: Taylor Heath
+      image: /assets/images/penn22 - Taylor Heath.jpg
+      bio: "Taylor Heath is an advanced Sociology and Demography doctoral student at Penn focusing on the intersection of natural disasters, social vulnerability, and housing and neighborhood inequality. Her prior work has examined federal policies such as post-disaster buyouts and flood insurance distribution, and market responses following flood and wind disasters such as changes to eviction patterns and rental prices. "
+      
+
+
+
