--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -27,7 +27,7 @@
 
         
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors Dr. Randal Pinkett and Dr. Jeffrey Robinson [(video)](https://youtu.be/VO3HxvIPseM) (*Zoom*)"
+    - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors Dr. Randal Pinkett and Dr. Jeffrey Robinson [(video)](https://youtu.be/B5V2s8xoi08) (*Zoom*)"
     - name: "2:15 - 2:30 Break"
     - name: "2:30 - 5:30 R Workshop (*Zoom*)
 
@@ -38,7 +38,7 @@
   name: Praxis to Power / Juneteenth
   events:
     - name: "10:00 - 11:00 Praxis to Power Day 2 Introduction and logistics (*Zoom*)"
-    - name: '11:00 - 12:00 SICSS-H/M 2021 Funded Alumni Research in Progress Panel [(Blog)](https://www.methodspace.com/blog/sicss-howardmathematica-alumni-receive-inaugural-excellence-in-computational-social-science-research-awards)
+    - name: '11:00 - 12:00 SICSS-H/M 2021 Funded Alumni Research in Progress Panel [(Blog)](https://www.methodspace.com/blog/sicss-howardmathematica-alumni-receive-inaugural-excellence-in-computational-social-science-research-awards) 
    
      
             
@@ -46,7 +46,7 @@
 
 
 
-        **"The Impact of Masks on Assessments of Facial Expressions of Pain"**
+        **"The Impact of Masks on Assessments of Facial Expressions of Pain"** [(video)](https://youtu.be/ZmPGlCfw9Gs)
 
           - Troy Dildine, Ph.D. candidate, Neuroscience, National Institutes of Health and Karolinska Institutet & SICSS-Howard/Mathematica 2021 alumni
 
@@ -58,7 +58,7 @@
            
                 
 
-        **"Global Crowns: Emotions Surrounding Natural Hair of Black Women around the Globe"** 
+        **"Global Crowns: Emotions Surrounding Natural Hair of Black Women around the Globe"** [(video)](https://youtu.be/wXqIlDjHxA8)
 
           - Nicole Jenkins, Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica 2021 alumni
 
@@ -66,7 +66,7 @@
 
 
 
-        **"Pre-service Sentiment: Analyzing Transcripts from a Student Avatar Experiment in Classroom Management Simulations"**
+        **"Pre-service Sentiment: Analyzing Transcripts from a Student Avatar Experiment in Classroom Management Simulations"** [(video)](https://youtu.be/uNxMJFtalgE)
 
           - Todd Hall, Ph.D. candidate, Education Policy, University of Virginia & SICSS-Howard/Mathematica 2021 alumni
 
@@ -99,9 +99,9 @@
 
           - Terri Adams, Ph.D., Faculty Co-Sponsor & Professor, Department of Sociology and Criminology, Associate Dean for Research with the Graduate School, Deputy Director, NOAA Cooperative Science Center for Atmospheric Sciences & Meteorology, Howard University [(video)](https://youtu.be/2R_w-PQbPD0)
 
-          - Nicole Jenkins, Ph.D., Faculty Co-Sponsor & Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alumni 2021
+          - Nicole Jenkins, Ph.D., Faculty Co-Sponsor & Assistant Professor, Department of Sociology and Criminology, Howard University & SICSS-Howard/Mathematica alumni 2021 [(video)](https://youtu.be/zq7wlUR_Wec)
           
-          - Amy Yeboah Quarkume, Ph.D., Faculty Co-Sponsor & Associate Professor, Africana Studies, Department of Afro-American Studies, Howard University
+          - Amy Yeboah Quarkume, Ph.D., Faculty Co-Sponsor & Associate Professor, Africana Studies, Department of Afro-American Studies, Howard University [(video)](https://youtu.be/nvt9-Ay9Hv8)
 
           - Calvin Hadley, Event Co-Sponsor & Senior Advisor for Strategic Initiatives, Office of the President, Howard University [(video)](https://youtu.be/y-dp19EpEcU)
 
@@ -184,7 +184,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #1: Just Tech program (SSRC) (video) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #1: Just Tech program (SSRC) [(video)](https://youtu.be/NIQlz6ea6OQ) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
         
         - [Michael Miller Ph.D., Program Director for Social Science Research Council Just Tech Program](https://www.ssrc.org/staff/miller-michael/)"
         
@@ -202,7 +202,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Extract Features from Tweets (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective and varyCSS (video) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective and varyCSS [(video)](https://youtu.be/1zSylGNvNpI) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
     
       - [Christen A. Smith, Associate Professor of African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin](https://liberalarts.utexas.edu/anthropology/faculty/cs23775)
       
@@ -347,7 +347,7 @@
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "10:00 - 10:30 Logistics (*Zoom*)"
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division UC Berkeley) (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division UC Berkeley) [(video)](https://youtu.be/tJCiuUxKe1Y) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)
     
         - [Lisa Garcia-Bedolla, Vice Provost for Graduate Studies, Dean of the Graduate Division, Professor in the Graduate School of Education](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla)"  
         
@@ -361,7 +361,7 @@
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
     - name: "10:00 - 10:30 Logistics (*Zoom*)"
     - name: "10:30 - 12:00 Work on group projects (*Zoom*)"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies (video) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #7: Africa Center for Strategic Studies [(video)](https://youtu.be/MpYlsOicYD0) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (video) (*Zoom*)
         
         - [Mark Duerksen, Ph.D., Research Associate, Africa Center for Strategic Studies](https://africacenter.org/experts/dr-mark-duerksen/)" 
         
