fixed TA pic file extension

--- a/_data/2022/singapore/teaching_assistants.yml
+++ b/_data/2022/singapore/teaching_assistants.yml
@@ -4,7 +4,7 @@
   
 - name: Chong Li Xuan
   bio: "Li Xuan is a penultimate undergraduate pursuing Food Science and Technology in the National University of Singapore. She is currently interested in learning about alternative food technology and the intersection of food and culture. Outside of school, she enjoys spending time armed with a boat and a paddle."
-  image: /assets/images/lixuan-sg.jpg
+  image: /assets/images/lixuan-sg.png
   
 - name: Bryan Teo Jun Hao
   bio: ""
