fixed title of talk

--- a/_data/2022/singapore/schedule.yml
+++ b/_data/2022/singapore/schedule.yml
@@ -78,6 +78,6 @@
 - date: Friday June 24, 2022
   name: Project Presentations
   events:
-    - name: "10:00 - 12:00 Closing keynote by Dr. Kokil Jaidka: From Noisy Data to Interpretation: the Next Frontier for the study of Southeast Asian online communities"
+    - name: "10:00 - 12:00 Closing keynote by Dr. Kokil Jaidka: From Noisy Data to Interpretation: the Next Frontier for the study of South Asian online communities"
     - name: "12:00 - 13:00 Lunch"
     - name: "13:00 - 17:00 Group presentations"
