--- a/_data/2022/bologna/participants.yml
+++ b/_data/2022/bologna/participants.yml
@@ -37,3 +37,7 @@
 - name: Yi (Melissa) Liu
   image: /assets/images/YiLiu_PIC.jpg
   bio: "Yi Liu is a PhD candidate in the Department of Experimental and Applied Psychology at the Vrije Universiteit Amsterdam. Her main interests are in social emotions and prosocial behavior. In the current project, she mainly focuses on exploring the development and characteristics of interpersonal hate and tests the psychological functions (e.g., trust, stress) when people are under interpersonal hate through both quantitative and qualitative methods."
+
+- name: Saba Rebecca Brause
+  image: /assets/images/SabaRebecca Brause_PIC.jpg
+  bio: "Saba Rebecca Brause is a research assistant and doctoral candidate at the Department of Communication and Media Research (IKMZ), University of Zurich. She holds an MSc in Social Science of the Internet from the University of Oxford, and a master's in communication from Sciences Po Paris. She previously worked as a research assistant at the Weizenbaum Institute for the Networked Society in Berlin, Germany. Her doctoral research focuses on imaginaries of artificial intelligence."
