--- a/_data/2022/singapore/teaching_assistants.yml
+++ b/_data/2022/singapore/teaching_assistants.yml
@@ -7,5 +7,5 @@
   image: /assets/images/lixuan-sg.png
   
 - name: Bryan Teo Jun Hao
-  bio: "Bryan Teo is a current undergraduate at the National University of Singapore pursuing a degree in Business Administration (Marketing). He enjoys travelling and bringing his camera along with him!"
+  bio: "Bryan Teo is a current undergraduate at the National University of Singapore pursuing a degree in Business Administration (Marketing). He enjoys travelling and bringing his camera along with him."
   image: /assets/images/bryan-sg.png
