--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -27,7 +27,7 @@
 
         
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors Dr. Randal Pinkett and Dr. Jeffrey Robinson [(video)](https://youtu.be/B5V2s8xoi08) (*Zoom*)"
+    - name: "1:15 - 2:15 A Discussion of *Black Faces in High Spaces: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors Dr. Randal Pinkett and Dr. Jeffrey Robinson [(video)](https://youtu.be/B5V2s8xoi08) (*Zoom*)"
     - name: "2:15 - 2:30 Break"
     - name: "2:30 - 5:30 R Workshop (*Zoom*)
 
@@ -202,7 +202,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to group exercise (*Zoom*)"
     - name: "10:15 - 11:30 Extract Features from Tweets (*Zoom*) OR Content-specific Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective and varyCSS [(video)](https://youtu.be/1zSylGNvNpI) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #2: Cite Black Women Collective and varyCSS [(video 1)](https://youtu.be/1zSylGNvNpI) [(video 2)](https://youtu.be/tGn-1it1n98) (LIVE Q+A) OR R, STATA, and Python Office hours with Mathematica TAs (as needed) (*Zoom*)
     
       - [Christen A. Smith, Associate Professor of African and African Diaspora Studies and Anthropology & Director, Center for Women’s and Gender Studies, The University of Texas at Austin](https://liberalarts.utexas.edu/anthropology/faculty/cs23775)
       
@@ -328,7 +328,7 @@
 
           - [Kyla McMullen, Ph.D., Assistant Professor of Computer and Information Science and Engineering at University of Florida](http://kylamcmullen.com/)
           
-          - [Danielle Olson, Ph.D., AI/ML Human Factors Researcher at Apple](http://hellodanio.com/about.html)
+          - [Danielle Olson, Ph.D., AI/ML Human Factors Researcher at Apple](http://hellodanio.com/about.html) [(video)](https://youtu.be/ASBM3i9-mvg)
 
 
           
@@ -338,7 +338,7 @@
         
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 [Brandeis Marshall, Ph.D., Professor, Computer Science, Spelman University](https://www.brandeismarshall.com/), "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE session to include Q&A and office hour (*Zoom*)'
+    - name: '4:00 - 5:30 [Brandeis Marshall, Ph.D., DataedX Group and Professor of Computer Science Spelman College (on sabbatical leave)](https://www.brandeismarshall.com/), "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE session to include Q&A and office hour (*Zoom*)'
     
     
 - date: 2022-06-29
