--- a/_data/2022/helsinki/participants.yml
+++ b/_data/2022/helsinki/participants.yml
@@ -29,3 +29,7 @@
 - name: Maria Litova
   image: /assests/images/Maria_Litova.jpg
   bio: "Maria Litova is a research assistant at the Centre for Social Data Science, University of Helsinki, Finland. She got her first Master’s degree in Sociology and currently is a Master’s student at the University of Helsinki with major in Social Data Science. Maria is interested in natural language processing, machine learning, healthcare and medical data analysis, youth research and well-being issues."
+
+  name: Iuliia Smirnova
+  image: /assets/images/Iuliia_Smirnova.jpg
+  bio: "Iuliia Smirnova just completed her master's degree and holds a BA in political science from the St. Petersburg State University. She uses qualitative research methods such as comparative analysis, traditional document analysis and case study method to explore civil and political education, political culture, public policy and Russian politics."
